# zencodecs

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.original.txt  FEEDBACK.md  PROPOSAL-v3.md  README.md  SLIM-PLAN.md  api-design.md  api-feedback.md  featreq.md  justfile
.github/workflows/: ci.yml
examples/: bench_wasm.rs  gainmap_inspect.rs  gainmap_roundtrip.rs  heaptrack_zencodec_traits.rs  icc_roundtrip.rs  metadata_roundtrip.rs  wasm_roundtrip.rs
fuzz/: Cargo.toml  seed_corpus.sh
src/: cms.rs  codec_id.rs  config.rs  decode.rs  dispatch.rs  dyn_dispatch.rs  encode.rs  error.rs  exif.rs  format.rs  format_set.rs  gainmap.rs  info.rs  lib.rs  limits.rs  pixel.rs  probe.rs  quality.rs  registry.rs  select.rs  transcode.rs  zennode_defs.rs
src/codecs/: avif_dec.rs  avif_enc.rs  bmp.rs  farbfeld.rs  gif.rs  hdr.rs  heic.rs  jpeg.rs  jxl_dec.rs  jxl_enc.rs  mod.rs  png.rs  png_zencodec.rs  pnm.rs  qoi.rs  raw.rs  tga.rs  tiff.rs  webp.rs
src/pipeline/: convert.rs  mod.rs  quality.rs
tests/: gainmap_e2e.rs  gainmap_integration.rs  regress.rs  stop_and_limits.rs  stop_latency.rs  ultrahdr.rs
zcimg/: Cargo.toml
zcimg/src/: batch.rs  info.rs  main.rs  metadata.rs  output.rs  process.rs
