[package]
name = "zencodecs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Unified image codec abstraction over zenjpeg, zenwebp, zengif, zenavif, png, and ravif"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg", "webp", "avif"]
repository = "https://github.com/imazen/zencodecs"

[dependencies]
# Core (always available)
enough = "0.3"
whereat = "0.1"
thiserror = { version = "2.0", default-features = false }

# Codecs (all optional, feature-gated)
zenjpeg = { path = "../zenjpeg/zenjpeg", optional = true }
zenwebp = { path = "../zenwebp", optional = true }
# zengif = { path = "../zengif", optional = true }  # Disabled: compilation error
# zenavif = { path = "../zenavif", optional = true, default-features = false }  # Disabled: rgb version conflict
png = { version = "0.18", optional = true }
# ravif = { version = "0.13", optional = true }  # Disabled for now

# Color management (optional)
# moxcms = { version = "0.8", optional = true, default-features = false }  # Disabled for now

[dev-dependencies]

[features]
default = ["jpeg", "webp", "png"]
std = []

# Individual codec features
jpeg = ["dep:zenjpeg"]
webp = ["dep:zenwebp"]
png = ["dep:png"]

# Disabled features (defined for check-cfg but not usable)
gif = []  # Disabled: compilation error in zengif
avif-decode = []  # Disabled: zenavif has rgb version conflict
avif-encode = []  # Disabled: ravif not yet integrated

# Color management
moxcms = []  # Disabled for now

# All codecs (currently only enabled ones)
all = ["jpeg", "webp", "png"]
