[package]
name = "zencodecs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Unified image codec abstraction over zenjpeg, zenwebp, zengif, zenavif, png, and ravif"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg", "webp", "avif"]
repository = "https://github.com/imazen/zencodecs"

[dependencies]
# Core (always available)
enough = "0.3"
whereat = "0.1"
thiserror = { version = "2.0", default-features = false }

# Codecs (all optional, feature-gated)
zenjpeg = { path = "../zenjpeg/zenjpeg", optional = true, features = ["decoder"] }
zenwebp = { path = "../zenwebp", optional = true }
zengif = { path = "../zengif", optional = true }
zenavif = { path = "../zenavif", optional = true }
rgb = { version = "0.8.52", optional = true, default-features = false, features = ["as-bytes"] }
png = { version = "0.18", optional = true }
ravif = { version = "0.13", optional = true }

# Color management (optional)
# moxcms = { version = "0.8", optional = true, default-features = false }  # Disabled for now

[dev-dependencies]

[features]
default = ["jpeg", "webp", "gif", "png", "avif-decode"]
std = []

# Individual codec features
jpeg = ["dep:zenjpeg"]
webp = ["dep:zenwebp"]
gif = ["dep:zengif"]
png = ["dep:png"]
avif-decode = ["dep:zenavif", "dep:rgb"]
avif-encode = ["dep:ravif"]

# Color management
moxcms = []  # Disabled for now

# All codecs
all = ["jpeg", "webp", "gif", "png", "avif-decode", "avif-encode"]
